welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:6: error: value && is not a member of Int
		if (nums(x)=nums(x+1) && nums(x+1)=nums(x+2)) {return false}
                                      ^