welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	val n:Int=nums.length.toInt
	var result:Boolean=true
	
	for (x<- 0 to n-3) {
		if (nums(x)=nums(x+1) && nums(x+1)=nums(x+2)) {return false}
		else {result=true}
	}
	
	
	return result
}
